--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello World!</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<h1>Hello World! Its a great Course.</h1>
 
 </body>
 </html>
